--- a/css/about.css
+++ b/css/about.css
@@ -10,13 +10,16 @@ h1 {
   font-family: Raleway, sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 nav {
   display: flex;
   align-items: center;
 }
 
 nav>a {
-  text-decoration: none;
   font-family: Raleway, sans-serif;
   color: black;
   font-size: 20px;
@@ -38,7 +41,7 @@ nav>a {
 
 p {
   display: inline-block;
-  font-family: Raleway, sans-serif;
+  font-family: Glegoo, sans-serif;
   font-size: 25px;
   line-height: 40px;
   width: 700px;
