--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
+
+
 header {
   display: flex;
   justify-content: space-around;
@@ -114,3 +120,32 @@ nav>a {
 a {
   color: black;
 }
+
+/* ===========================================
+              MEDIA QUERIES
+  ============================================
+ */
+
+ @media only screen and (max-width: 960px) {
+ }
+
+ @media only screen and (max-width: 660px) {
+
+ }
+
+ @media only screen and (max-width: 450px) {
+   header {
+     flex-direction: column;
+     align-items: center;
+     width: 450px;
+   }
+
+   header>h1 {
+     font-size: 40px;
+   }
+
+   nav>a {
+     font-size: 20px;
+   }
+
+ }
