--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 header {
   display: flex;
   justify-content: space-around;
@@ -12,6 +16,7 @@ h1 {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 nav {
@@ -21,30 +26,29 @@ nav {
 
 nav>a {
   font-family: Raleway, sans-serif;
-  color: black;
   font-size: 20px;
   padding-right: 20px;
 }
 
 .content {
   display: flex;
+  justify-content: space-around;
+  margin: 2% 13%;
 }
 
 .image {
   display: inline-block;
   background: gray;
-  width: 500px;
-  height: 600px;
-  margin-left: 15%;
-  margin-top: 2%;
+  width: 400px;
+  height: 500px;
 }
 
 p {
   display: inline-block;
   font-family: Glegoo, sans-serif;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 40px;
   width: 700px;
-  margin: 2% 5%;
+  margin: 0% 5%;
   text-align: justify;
 }
