created responsive about me page

--- a/css/about.css
+++ b/css/about.css
@@ -52,3 +52,59 @@ p {
   margin: 0% 5%;
   text-align: justify;
 }
+/*
+  ===========================================
+              MEDIA QUERIES
+  ============================================
+ */
+
+ @media only screen and (max-width: 960px) {
+ }
+
+ @media only screen and (max-width: 660px) {
+
+ }
+
+ @media only screen and (max-width: 450px) {
+   body {
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+   }
+
+   header {
+     flex-direction: column;
+     align-items: center;
+     width: 100%;
+     margin-top: 10%;
+     margin-bottom: 10%;
+     text-align: center;
+   }
+
+   header>h1 {
+     font-size: 40px;
+   }
+
+   nav>a {
+     font-size: 15px;
+     padding-right: 15px;
+   }
+
+   .content {
+     display: flex;
+     flex-direction: column;
+   }
+
+   .image {
+     height: 250px;
+     width: 100%;
+   }
+
+   p {
+     font-size: 15px;
+     width: 100%;
+     line-height: 20px;
+     margin: 10px 0px;
+     text-align: justify;
+   }
+ }
