--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ a {
 
    .card {
      display: flex;
-     align-items: flex-start;
+     align-items: center;
      justify-content: center;
    }
 
