--- a/css/about.css
+++ b/css/about.css
@@ -38,9 +38,11 @@ nav>a {
 
 .image {
   display: inline-block;
-  background: gray;
+  background-image: url('../static/media/headshot.JPG');
+  background-size: cover;
+  background-position: center;
   width: 400px;
-  height: 500px;
+  height: 350px;
 }
 
 p {
