Replaced Spot Tunes project with Pixel Art

--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,8 @@ body {
   background-image: url('../static/media/tearoom.png');
 }
 
-.spottunes {
-  background-image: url('../static/media/spottunes-landing.png');
+.pixelart {
+  background-image: url('../static/media/PixelArtDemo.png');
 }
 
 .dentist {
