feat(2022-refresh): Added project, revised about page

--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@ nav>a {
 
 .image {
   display: inline-block;
-  background-image: url('../static/media/headshot.JPG');
+  background-image: url('../static/media/headshot-2019.JPG');
   background-size: cover;
   background-position: center;
   width: 400px;
